--- a/public/styles/todolist/_main.scss
+++ b/public/styles/todolist/_main.scss
@@ -23,6 +23,10 @@ header{
 }
 
 main{
+    h1{
+        text-align: center;
+        color: #FFFFFF;
+    }
     .title{
         text-align: center;
         color: #004B97;
