--- a/public/styles/todolist/all.css
+++ b/public/styles/todolist/all.css
@@ -347,6 +347,10 @@ header section.weather h1 a:hover, header section.weather h1 .active {
   opacity: 1;
 }
 
+main h1 {
+  text-align: center;
+  color: #FFFFFF;
+}
 main .title {
   text-align: center;
   color: #004B97;
