--- a/public/styles/todolist/all.css
+++ b/public/styles/todolist/all.css
@@ -339,6 +339,16 @@ body {
   background-color: #00E3E3;
 }
 
+header section.weather .city {
+  color: #fff;
+}
+header section.weather .description {
+  color: #fff;
+}
+header section.weather img {
+  width: 5vw;
+  height: 5vw;
+}
 header section.weather h1 a, header section.weather h1 .divider {
   color: #fff;
   opacity: 0.6;
@@ -347,12 +357,13 @@ header section.weather h1 a:hover, header section.weather h1 .active {
   opacity: 1;
 }
 
-main h1 {
+main .date, main .title, main .warning {
   text-align: center;
+}
+main .date {
   color: #FFFFFF;
 }
 main .title {
-  text-align: center;
   color: #004B97;
 }
 main form {
@@ -360,17 +371,27 @@ main form {
   justify-content: center;
   align-items: center;
 }
-main input, main button {
+main form input, main form button {
   padding: 0.25rem 0.5rem;
   margin: 0.1rem;
   font-size: 1.75rem;
 }
-main input[type=time] {
+main form input[type=time] {
   width: 190px;
   height: 40.19px;
   text-align: center;
 }
-main button {
+main form button {
+  background-color: rgb(1, 146, 114);
+  color: #fff;
+}
+main .warning {
+  color: #ff0000;
+}
+main .sort button {
+  padding: 0.25rem 0.5rem;
+  margin: 0.1rem;
+  font-size: 1.75rem;
   background-color: rgb(1, 146, 114);
   color: #fff;
 }
@@ -392,10 +413,12 @@ main section.todoBox div.todo {
 main section.todoBox div.todo .todo-time {
   width: 15%;
   outline: 1px solid red;
+  color: #004B97;
 }
 main section.todoBox div.todo .todo-text {
   width: 80%;
   outline: 1px solid blue;
+  color: #004B97;
 }
 main section.todoBox div.todo button {
   align-self: center;
