--- a/views/todolist.ejs
+++ b/views/todolist.ejs
@@ -54,7 +54,9 @@
             <button>Sort By Time</button>
         </div>
 
-        <section class="todoBox"></section>
+        <section class="todoBox">
+            <h1 class="warning"></h1>
+        </section>
     </main>
     
 
