--- a/public/styles/todolist/_main.scss
+++ b/public/styles/todolist/_main.scss
@@ -69,6 +69,9 @@ main{
         width: 55vw;
         margin: 0 auto;
         outline: 1px solid red;
+        .warning{
+            color: blueviolet;
+        }
         div.todo{
             display: flex;
             justify-content: center;
