--- a/views/todolist.ejs
+++ b/views/todolist.ejs
@@ -9,7 +9,7 @@
     <meta name="rating" content="General">
     <base target="_self">
     <meta name="description" content=""> 
-    <title>代辦事項</title>
+    <title>待辦事項</title>
     <link rel="stylesheet" href="../styles/todolist/all.css">
 </head>
 <body>
@@ -33,6 +33,11 @@
                 <span class="temp-min"></span>
             </h3>
         </section> 
+
+        <ul>
+            <li><a onclick="booking()">預定行程</a></li>  
+            <li><a class="stateSwitch" onclick="change('login')">登入/註冊</a></li>
+        </ul>
     </header>
 
     <main class="todayPlan">
