--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,7 @@
 
     <main>
       <!-- 黑夜背景 -->
-      <section class="nightBackground">
+      <section class="night">
         <div class="moon"></div>
 
         <div class="star">
@@ -168,11 +168,10 @@
           <div class="spruce spruce--7">
             <div class="spruce__mid"></div>
             <div class="spruce__top"></div>
-          </div>
+          </div> 
         </div>
 
         <div class="tent">
-          <!-- <div class="tent__color"></div> -->
           <div class="tent__back"></div>
           <div class="tent__front"></div>
           <div class="tent__details"></div>
@@ -180,10 +179,9 @@
           <div class="tent__pole"></div>
         </div> 
 
-        <!-- cat -->
-        <svg id="catBox" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.5">
+        <svg class="cat" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.5">
         
-          <!-- 數值越靠近 0，喵的位置會越往下移動 -->
+          <!-- y數值 越靠近 0，喵的位置會越往下移動 -->
           <g id="cat">
             <svg class="cat" x="-250" y="84">
               <path id="right-hand" d="M399.588 305.324s-27.311-.341-25.911 8.246c1.027 6.301 8.592 7.007 14.778 7.167 6.187.16 36.063-.563 11.133-15.413z" fill="#98aebe"/>
