--- a/public/styles/index/_main.scss
+++ b/public/styles/index/_main.scss
@@ -266,14 +266,14 @@ body{
         position: relative;
         width: 100%;
         height: 48.5vw;
-        background-color: #000033;
-              
-        .nightBackground{            
+        
+        .night{            
             width: 100%;
-            height: 48.5vw; // <==注意:處理多一周，背景調整高度
+            height: 48.5vw; // <== 注意:處理多一周，背景調整高度
             position: absolute;                          
             background: linear-gradient(180deg, #000000, #000033); 
             overflow: hidden;    
+
             .moon{
                 position: absolute;
                 top: 3%;
@@ -346,7 +346,9 @@ body{
             }
         
             .forest{
-                position: relative;
+                position: relative;                
+            }
+            .bottonCut{
                 .spruce {
                     width: 0;
                     height: 0;
@@ -355,7 +357,7 @@ body{
                     border-bottom: 160px solid var(--spruce-mid);
                     position: absolute;
                     bottom: -350px; 
-                    left: 35px;                      
+                    left: 35px;                     
 
                     &__mid,
                     &__top {
@@ -393,7 +395,7 @@ body{
                             transform: rotate(155deg);
                         }
                     }
-            
+                    
                     &--1 {
                         left: 100px;
                         bottom: -615px; 
@@ -406,12 +408,12 @@ body{
                         left: -15px;
                         bottom: -620px; 
                         animation: 1s linear 0s infinite alternate spruce2;
-                        z-index: 2;
+                        z-index: 2;                         
                     }
             
                     &--3 {
                         left: -40px;
-                        bottom: -625px; // [-630]
+                        bottom: -625px; 
                         transform: scale(0.8);
                         filter: brightness(0.75);
                         animation: 0.9s linear 0s infinite alternate spruce3;
@@ -419,7 +421,7 @@ body{
             
                     &--4 {
                         left: 42px;
-                        bottom: -605px;
+                        bottom: -605px; 
                         transform: scale(1.2) rotateY(35deg);
                         filter: brightness(1.3);
                         animation: 1s linear 0s infinite alternate spruce4;
@@ -437,7 +439,7 @@ body{
             
                     &--6 {
                         left: 65px;
-                        bottom: -565px; 
+                        bottom: -600px; 
                         transform: scale(0.95);
                         filter: brightness(.95);
                         z-index: 3;
@@ -453,40 +455,148 @@ body{
                         animation: 1s linear 0s infinite alternate spruce7;
                     }
                 }
-                @keyframes spruce1 {
-                    0% {transform: scale(0.9) rotate(-1deg);}
-                    100% {transform: scale(0.9) rotate(0.5deg);}
+            }
+            .bottonAdd{                  
+                .spruce {
+                    width: 0;
+                    height: 0;
+                    border-left: 60px solid transparent;
+                    border-right: 60px solid transparent;
+                    border-bottom: 160px solid var(--spruce-mid);
+                    position: absolute;
+                    bottom: -350px; 
+                    left: 35px;                     
+
+                    &__mid,
+                    &__top {
+                        &::before,
+                        &::after {
+                            content: '';
+                            width: 0;
+                            height: 0;
+                            border-top: 50px solid transparent;
+                            border-bottom: 50px solid transparent;
+                            border-left: 60px solid var(--spruce-mid);
+                            transform: rotate(18deg);
+                            position: absolute;
+                            bottom: -90px;
+                            left: -27px;
+                        }
+            
+                        &::after {
+                            transform: rotate(163deg);
+                            left: -33px;
+                        }
+                    }
+            
+                    &__top {
+                        transform: scale(0.6);
+                        bottom: 35px;
+                        position: absolute;
+            
+                        &::before {
+                            border-top: 60px solid transparent;
+                            transform: rotate(25deg);
+                        }
+            
+                        &::after {
+                            transform: rotate(155deg);
+                        }
+                    }
+                    
+                    &--1 {
+                        left: 100px;
+                        bottom: -712px; 
+                        transform: scale(.9);
+                        filter: brightness(0.7);
+                        animation: 0.9s linear 0s infinite alternate spruce1;
+                    }
+            
+                    &--2 {
+                        left: -15px;
+                        bottom: -717px; 
+                        animation: 1s linear 0s infinite alternate spruce2;
+                        z-index: 2;
+                    }
+            
+                    &--3 {
+                        left: -40px;
+                        bottom: -722px; 
+                        transform: scale(0.8);
+                        filter: brightness(0.75);
+                        animation: 0.9s linear 0s infinite alternate spruce3;
+                    }
+            
+                    &--4 {
+                        left: 42px;
+                        bottom: -702px; 
+                        transform: scale(1.2) rotateY(35deg);
+                        filter: brightness(1.3);
+                        animation: 1s linear 0s infinite alternate spruce4;
+                        z-index: 4;
+                    }
+                    
+                    &--5 {
+                        left: 15px;
+                        bottom: -682px; 
+                        transform: scale(0.85) rotateY(30deg);
+                        filter: brightness(0.7);
+                        z-index: -2;
+                        animation: 1s linear 0s infinite alternate spruce5;
+                    }
+            
+                    &--6 {
+                        left: 65px;
+                        bottom: -697px; 
+                        transform: scale(0.95);
+                        filter: brightness(.95);
+                        z-index: 3;
+                        animation: 1s linear 0s infinite alternate spruce6;
+                    }
+            
+                    &--7 {
+                        left: 125px;
+                        bottom: -707px;
+                        transform: scale(1.2) rotateY(50deg);
+                        filter: brightness(0.98);
+                        z-index: 3;
+                        animation: 1s linear 0s infinite alternate spruce7;
+                    }
                 }
-                
-                @keyframes spruce2 {
-                    0% {transform: rotate(0.5deg);}
-                    100% {transform: rotate(-1deg);}
-                }
-                
-                @keyframes spruce3 {
-                    0% {transform: scale(0.8) rotate(1deg);}
-                    100% {transform: scale(0.8) rotate(-1deg);}
-                }
-                
-                @keyframes spruce4 {
-                    0% {transform: scale(1.2) rotateY(35deg) rotate(-1deg);}
-                    100% {transform: scale(1.2) rotateY(35deg) rotate(1deg);}
-                }
-                
-                @keyframes spruce5 {
-                    0% {transform: scale(0.85) rotateY(30deg) rotate(-1deg);}
-                    100% {transform: scale(0.85) rotateY(30deg) rotate(1deg);}
-                }
-                
-                @keyframes spruce6 {
-                    0% {transform: scale(0.95) rotate(0.5deg);}
-                    100% {transform: scale(0.95) rotate(-1deg);}
-                }
-                
-                @keyframes spruce7 {
-                    0% {transform: scale(1.2) rotateY(50deg) rotate(1deg);}
-                    100% {transform: scale(1.2) rotateY(50deg) rotate(-1deg);}
-                }
+            }
+            @keyframes spruce1 {
+                0% {transform: scale(0.9) rotate(-1deg);}
+                100% {transform: scale(0.9) rotate(0.5deg);}
+            }
+            
+            @keyframes spruce2 {
+                0% {transform: rotate(0.5deg);}
+                100% {transform: rotate(-1deg);}
+            }
+            
+            @keyframes spruce3 {
+                0% {transform: scale(0.8) rotate(1deg);}
+                100% {transform: scale(0.8) rotate(-1deg);}
+            }
+            
+            @keyframes spruce4 {
+                0% {transform: scale(1.2) rotateY(35deg) rotate(-1deg);}
+                100% {transform: scale(1.2) rotateY(35deg) rotate(1deg);}
+            }
+            
+            @keyframes spruce5 {
+                0% {transform: scale(0.85) rotateY(30deg) rotate(-1deg);}
+                100% {transform: scale(0.85) rotateY(30deg) rotate(1deg);}
+            }
+            
+            @keyframes spruce6 {
+                0% {transform: scale(0.95) rotate(0.5deg);}
+                100% {transform: scale(0.95) rotate(-1deg);}
+            }
+            
+            @keyframes spruce7 {
+                0% {transform: scale(1.2) rotateY(50deg) rotate(1deg);}
+                100% {transform: scale(1.2) rotateY(50deg) rotate(-1deg);}
             }
             
             .tent {
@@ -513,7 +623,7 @@ body{
                         border-radius: 100% 0 0 0;
                         position: absolute;
                         bottom: -6px;                
-                        left: 83px;                                        
+                        left:83px;                                       
                     }
         
                     &::after {
@@ -539,7 +649,6 @@ body{
                     position: absolute;
                     bottom: -20px;
                     left: 255px;
-                    // outline: 1px solid lightblue;
         
                     &::before {
                         content: '';
@@ -555,7 +664,6 @@ body{
                         animation: brightTent 8s infinite alternate;
                         -webkit-transition: all 2000ms linear;
                         transition: all 2000ms linear;         
-                        // outline: 1px solid red;
                     }
         
                     &::after {
@@ -568,7 +676,6 @@ body{
                         position: absolute;
                         bottom: 11px; 
                         left: -50px; 
-                        // outline: 1px solid lightsalmon;
                     }
                 }
         
@@ -582,7 +689,6 @@ body{
                     left: 174px;
                     opacity: .4;
                     z-index: 3;
-                    // outline: 1px solid lightseagreen;
         
                     &::before,
                     &::after {
@@ -619,7 +725,6 @@ body{
                     position: absolute;
                     bottom: -6px;
                     left: 120px;
-                    // outline: 1px solid blueviolet;
         
                     &::before,
                     &::after {
@@ -632,20 +737,18 @@ body{
                         position: absolute;
                         bottom: 86px;
                         left: 120px;
-                        // outline: 1px solid yellowgreen;
                     }
         
                     &::before {
                         transform: rotate(-30deg);
                         bottom: 0px;
-                        // left: 130px;outline: 1px solid yellowgreen;
+                        left: 130px;
                     }
         
                     &::after {
                         transform: rotate(-5deg);
                         bottom: 80px;
                         left: 310px;
-                        // outline: 1px solid yellowgreen;
                     }
                 }
         
@@ -684,28 +787,24 @@ body{
                 50%{
                     box-shadow: 0px 0px 206px 34px #b66e37; 
                 }
-            }   
-        } 
-                   
-        #catBox{
-            width: 50%;
-            height: 30vw;
-            position: absolute;
-            right: 0;
-            top: -340px; 
-            z-index: 11;
-            overflow: visible;
-            // outline: 3px solid lightgreen;
-            #cat{
-                // outline: 3px solid red;
             }
-        }
 
+            .cat{
+                width: 50%;
+                height: 30vw;
+                position: absolute;
+                right: 0;
+                top: -340px; 
+                z-index: 11;
+                overflow: visible;
+            }
+        } 
+                  
         section.calendar {
             margin: auto;
             z-index: 10;  
             margin-top: 30px; 
-            // outline: 3px solid yellow;
+
             #calendar {
                 margin-bottom: 30px; 
                 width: 700px;          
@@ -713,7 +812,7 @@ body{
                 background-color: white;
                 border-radius: 3%;
                 overflow: hidden;
-                // outline: 3px solid #80FFFF	;
+                
                 thead {
                     tr{
                         .arrow {
