--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,7 @@
 
     <main>
       <!-- 白天背景 -->
-      <section class="daytime">
+      <!-- <section class="daytime">
         <div id="sun"></div>
         <div id="sea"></div>
         <div id="sand"></div>
@@ -186,13 +186,18 @@
             <li class="boat-body"></li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- 黑夜背景 -->
-      <!-- <section class="night">
-        <div class="moon"></div>
+      <section class="night">
+        <div id="moon"></div>
 
-        <div class="star">
+        <div id="star">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
           <div></div>
           <div></div>
           <div></div>
@@ -211,7 +216,7 @@
           <div></div>
         </div>
 
-        <div class="forest">
+        <div id="forest">
           <div class="spruce spruce--1">
             <div class="spruce__mid"></div>
             <div class="spruce__top"></div>
@@ -242,19 +247,18 @@
           </div> 
         </div>
 
-        <div class="tent">
-          <div class="tent__back"></div>
-          <div class="tent__front"></div>
-          <div class="tent__details"></div>
-          <div class="tent__prop"></div>
-          <div class="tent__pole"></div>
-        </div>  -->
+        <div id="tent">
+          <div class="tent-back"></div>
+          <div class="tent-front"></div>
+          <div class="tent-details"></div>
+          <div class="tent-prop"></div>
+          <div class="tent-pole"></div>
+        </div> 
 
-        <!-- <svg class="cat" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.5"> -->
-        
-          <!-- y數值 越靠近 0，喵的位置會越往下移動 -->
-          <!-- <g id="cat">
-            <svg class="cat" x="-250" y="84">
+        <!-- y數值 越靠近 0，喵的位置會越往下移動 // [old: x="-280" y="78"] -->
+        <svg id="cat" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"     clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.5">
+          <g class="cat"> 
+            <svg class="catPosition" x="-280">
               <path id="right-hand" d="M399.588 305.324s-27.311-.341-25.911 8.246c1.027 6.301 8.592 7.007 14.778 7.167 6.187.16 36.063-.563 11.133-15.413z" fill="#98aebe"/>
               
               <path id="body" d="M411.422 284.308s81.404-40.992 98.905-.679c11.659 26.856-7.93 42.028-43.527 42.028-23.361 0-43.863-1.588-52.67-5.836-8.807-4.248-2.708-35.513-2.708-35.513z" fill="#98aebe"/>
@@ -292,7 +296,6 @@
 
                 <path d="M395.324 306.77s-4.319-1.774-9.465-.34M421.684 306.77s4.319-1.774 9.465-.34M395.607 309.089s-3.765-.486-8.735 2.943M421.401 309.089s3.765-.486 8.734 2.943" fill="none" stroke="#556f80" stroke-width="2" stroke-linecap="round"/>
               
-
                 <path d="M408.904 305.48a1.174 1.174 0 011.273.026c.166.106.317.226.458.355a1.456 1.456 0 01-.935 2.539c-.144 0-.289-.002-.434-.01a1.468 1.468 0 01-.871-2.577c.164-.107.329-.224.509-.333z" fill="#556f80"/>
 
                 <path d="M391.495 296.712c.993 1.432 3.476 2.14 5.121 2.13 1.987-.011 4.015-.608 5.028-2.13M416.205 296.712c.993 1.432 3.476 2.14 5.122 2.13 1.986-.011 4.014-.608 5.028-2.13" fill="none" stroke="#556f80" stroke-width="2" stroke-linecap="round"/>
@@ -304,9 +307,9 @@
                   
               <path id="left-hand" d="M426.186 311.409s-15.939 22.179-8.101 25.956c5.751 2.771 10.668-3.022 14.345-7.998 3.678-4.977 20.216-29.869-6.244-17.958z" fill="#98aebe"/>   
             </svg>               
-          </g>  
-        </svg> -->
-      <!-- </section> -->
+          </g>
+        </svg>  
+      </section>
 
       <section class="calendar">
         <table id="calendar">
