[前端][ UI "白天、黑夜背景切換" ]完成功能 "進入網頁的當下才切換背景" - 方法1 : 使用style屬性設定元素的行內樣式

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,7 @@
 
     <main>
       <!-- 白天背景 -->
-      <!-- <section class="daytime">
+      <section class="daytime">
         <div id="sun"></div>
         <div id="sea"></div>
         <div id="sand"></div>
@@ -186,7 +186,7 @@
             <li class="boat-body"></li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- 黑夜背景 -->
       <section class="night">
