--- a/public/styles/index/_main.scss
+++ b/public/styles/index/_main.scss
@@ -293,11 +293,11 @@ body{
                     right: 6%;
                     width: 100px;
                     height: 100px;
-                    background: radial-gradient(circle, #ffaa5a, #ffd79b); 
                     border-radius: 50%;
+                    background: radial-gradient(circle, #ffaa5a, #ffd79b); 
                     box-shadow: inset 0 0 50px 2px #fef376, 0 0 100px 20px #ffd07e, 0 0 150px 50px #fff877;
                     animation: brightSun 4s infinite alternate;
-                    transition: all 2000ms linear;                 
+                    // transition: all 2000ms linear;                 
                     // outline: 1px solid orangered;               
                 }
                 @keyframes brightSun{
@@ -1139,8 +1139,7 @@ body{
                     border-radius: 50%;
                     box-shadow: inset 0 0 2px 2px #f7f772, 0 0 10px 5px #FFFF37;
                     animation: brightMoon 4s infinite alternate;
-                    -webkit-transition: all 2000ms linear;
-                    transition: all 2000ms linear;   
+                    // transition: all 2000ms linear;   
                 }
                 @keyframes brightMoon{
                     0%{
