--- a/public/styles/index/_main.scss
+++ b/public/styles/index/_main.scss
@@ -1,4 +1,15 @@
-/* 登入會員帳號 */
+:root{
+
+    // day (sandcastle)
+    --sand-color: #EBC69F;
+    --sand-accent: #EABB8C;
+
+    // night(forest、tent)
+    --spruce-mid: #4570bf;
+    --pole: #502801;
+    --light: #E4E5E4;
+}
+
 section.shadow{
     position: fixed;
     z-index: 1999;
@@ -8,6 +19,8 @@ section.shadow{
     opacity: 0.25;
     display: none;   
 }
+
+/* 登入會員帳號 */
 section.login{
     position: fixed;
     z-index: 2000;
@@ -201,16 +214,88 @@ section.register{
     }
 }
 
-:root{
+/* Schedule */
+section.schedule{
+    position: fixed;
+    z-index: 2000;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 340px;
+    height: 301px; //[new]
+    border-radius: 5px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 60px #AAAAAA;
+    display: none;
+    // outline: 1px solid red;
+    div.topColorBox{
+        height: 10px;
+        border-radius: 6px 6px 0px 0px;
+        background: linear-gradient(270deg, #337788 0%, #66AABB 100%);
+        // outline: 1px solid blue;
+    }
+    div.scheduleData{
+        display: flex;
+        flex-direction: column;
+        // outline: 1px solid green;
+        div.scheduleTitle{
+            display: flex;
+            align-items: center;
+            margin: 15px 15px 10px 15px;
+            position: relative;
+            // outline: 1px solid red;
+            h2{
+                width: 310px;
+                text-align: center;
+                // outline: 1px solid green;
+            }
+            img{
+                position: absolute;
+                top: 0px;
+                right: 0px;
+                z-index: 100;
+                width: 16px;
+                height: 16px;
+                // outline: 1px solid blue;
+            }
+        }
+        
+        input{
+            width: 310px;
+            height: 47px;
+            line-height: normal;
+            font-size: 1.25rem;
+            margin: 5px 15px;
+            padding: 15px;
+            border: 1px solid #CCCCCC;
+            border-radius: 5px;
+            // outline: 1px solid green;    
+        }
 
-    // day (sandcastle)
-    --sand-color: #EBC69F;
-    --sand-accent: #EABB8C;
-
-    // night(forest、tent)
-    --spruce-mid: #4570bf;
-    --pole: #502801;
-    --light: #E4E5E4;
+        .scheduleBtn{
+            width: 310px;
+            height: 47px;
+            color: #FFFFFF;
+            background: #448899;
+            border:0;
+            outline:none;
+            border-radius: 5px;
+            font-size: 19px;
+            margin: 5px 15px; 
+            // outline: 1px solid fuchsia;   
+        }    
+                 
+        p#scheduleError, p#scheduleSuccess{
+            width: 310px;
+            height: 47px;
+            line-height: 47px;
+            margin: 0 auto;
+            text-align: center;
+            color: #ff0000;
+            display: none;
+            // outline: 1px solid blue;
+        }
+    }
 }
 
 body{
